kustomize/overlays/single-cluster/patches/httproute-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: incident-api-route
  namespace: incident-api
spec:
  hostnames:
    - incidents.apps.<cluster-domain>
